--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,7 +5,6 @@
     <vendor email="a483210@163.com" url="https://github.com/linsage">a483210</vendor>
     <description><![CDATA[
       <a href="https://github.com/linsage/java2json">GitHub</a> |
-      <a href="https://www.paypal.me/linsage">Donate with PayPal</a> |
       <br/>
       <br/>
       <p>A simple plugin for converting Java bean to JSON</p>
@@ -16,11 +15,11 @@
          <li>1.0.0 - First revision.</li>
     ]]>
     </change-notes>
-    <idea-version since-build="203.5981.155"/>
+    <idea-version since-build="211"/>
 
-    <depends>com.intellij.modules.lang</depends>
-    <depends>com.intellij.modules.java</depends>
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.lang</depends>
+    <depends>com.intellij.java</depends>
     <depends>org.jetbrains.kotlin</depends>
 
     <actions>
@@ -34,6 +33,10 @@
             <action class="com.xy.bean2json.action.ConvertToJsonRearAction" id="toRear"
                     text="ToRear">
                 <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt 2"/>
+            </action>
+            <action class="com.xy.bean2json.action.ConvertToProtobufAction" id="toProtobuf"
+                    text="ToProtobuf">
+                <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt 3"/>
             </action>
         </group>
 
