--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,10 +1,10 @@
 <idea-plugin>
     <id>com.xy.bean2json</id>
-    <name>JavaBean to Json</name>
+    <name>JavaBean(Kotlin) to Json</name>
     <version>1.0.0</version>
-    <vendor email="a483210@163.com" url="https://github.com/linsage">a483210</vendor>
+    <vendor email="a483210@163.com" url="https://github.com/a483210">a483210</vendor>
     <description><![CDATA[
-      <a href="https://github.com/linsage/java2json">GitHub</a> |
+      <a href="https://github.com/a483210/bean2json">GitHub</a> |
       <br/>
       <br/>
       <p>A simple plugin for converting Java bean to JSON</p>
@@ -33,10 +33,6 @@
             <action class="com.xy.bean2json.action.ConvertToJsonRearAction" id="toRear"
                     text="ToRear">
                 <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt 2"/>
-            </action>
-            <action class="com.xy.bean2json.action.ConvertToProtobufAction" id="toProtobuf"
-                    text="ToProtobuf">
-                <keyboard-shortcut keymap="$default" first-keystroke="ctrl alt 3"/>
             </action>
         </group>
 
