--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.github.jsonzou:jmockdata:4.3.0'
     implementation 'net.datafaker:datafaker:1.8.1'
     implementation 'org.ahocorasick:ahocorasick:0.6.3'
 
